<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">生活宝</string>
    <string name="baidufanyi">百度翻译</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">dummy_content</string>
    <string name="tab_function">首页</string>
    <string name="tab_news_center">新闻中心</string>
    <string name="tab_smart_service">视频娱乐</string>
    <string name="tab_setting">设置</string>
    <string name="share_content">非常的好</string>
    <string name="removeItem">删除</string>
    <string name="exit">再点一次退出</string>
    <string name="title_activity_bai_du_map">百度地图定位</string>
    <string name="action_settings">设置</string>
    <string name="source_content_text_hint">请输入要翻译的文字</string>
    <string name="translate">翻译</string>
    <string name="translate_result">翻译结果:</string>
    <string name="offline_package">离线包</string>
    <string name="download">下载</string>
    <string name="downloaded">已下载</string>
    <string name="undownload">未下载</string>
    <string name="has_update">有更新</string>
    <string name="update">更新</string>
    <string name="delete">删除</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="networkno">网络不给力啊</string>
    <string name="locationno">定位失败</string>
    <!-- ip地址查询 -->
    <string name="ipserch">请输入ip地址</string>
    <string name="ipserchnote">ip值为空的时候默认获取本地的</string>
    <string name="ipserchs">确定</string>
    <!--  -->
    <!-- 手机号查询 -->
    <string name="phoneserch">请输入手机号</string>
    <!--  -->
    <!-- 视频栏 -->
    <string name="video_redian">热点</string>
    <string name="video_yule">娱乐</string>
    <string name="video_gaoxiao">搞笑</string>
    <string name="video_jingpin">精品</string>
    <string name="check_banben">版本更新</string>

    <string-array name="language">
        <item>自动检测</item>
        <item>中文</item>
        <item>英语</item>
        <item>日语</item>
        <item>韩语</item>
        <item>西班牙语</item>
        <item>法语</item>
        <item>泰语</item>
        <item>阿拉伯语</item>
        <item>俄语</item>
        <item>葡萄牙语</item>
        <item>粤语</item>
        <item>文言文</item>
    </string-array>
    <string-array name="language_short">
        <item>auto</item>
        <item>zh</item>
        <item>en</item>
        <item>jp</item>
        <item>kor</item>
        <item>spa</item>
        <item>fra</item>
        <item>th</item>
        <item>ara</item>
        <item>ru</item>
        <item>pt</item>
        <item>yue</item>
        <item>wyw</item>
    </string-array>

    <string name="title_activity_ip_search">IP地址</string>
    <string name="title_activity_phone_message">手机信息查询</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="left_feedback">用户反馈</string>
    <string name="isnewest">(当前为最新版本)</string>
    <string name="abouat">关于我们</string>
    <string name="yes">确定</string>
    <string name="abouatme">小弟开发一款应用不容易，内嵌了一点广告，大家多多点击哦，祝大家用的愉快嘎嘎</string>
    <string name="title_activity_flash_light">FlashLightActivity</string>

</resources>
