<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".BaiDuFanYIActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/from_lang_spinner"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/to_lang_spinner"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/source_content_text"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_marginTop="20dip"
        android:gravity="left|top"
        android:cursorVisible="true"
        android:background="@drawable/fanyi_bg_normal"
        android:hint="@string/source_content_text_hint"
        android:inputType="textMultiLine"
        android:padding="2dip" />


        <Button
            android:id="@+id/translate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_selector"
            android:text="@string/translate" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/translate_result"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/translate_result_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/fanyi_bg_normal"
        android:layout_marginTop="5dip" />
    
    <Button
            android:id="@+id/offline_pakage_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:background="@drawable/btn1_selector"
            android:text="@string/offline_package" />

</LinearLayout>