<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_title_bar" />
   <RelativeLayout
       android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/checkUpdate"
            style="@style/my_itme"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/update_progress"
            android:drawableRight="@null"
            android:text="@string/check_banben" />

        <ProgressBar
            android:id="@+id/update_progress"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/newest"
            style="@style/my_itme"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:drawableRight="@null"
            android:text="@string/isnewest"
            android:textColor="@color/main_red"
            android:visibility="gone" />
        <TextView
            android:id="@+id/about"
            style="@style/my_itme"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_below="@id/checkUpdate"
            android:drawableRight="@null"
            android:text="@string/abouat"
            />
    </RelativeLayout>

</LinearLayout>