<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_ip_input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/ip_search"
        android:hint="@string/ipserch"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/red"
        android:text="@string/ipserchnote" />
    <Button 
         android:id="@+id/btn_ip_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_selector"
        android:text="@string/ipserchs"
        android:layout_marginLeft="200dp"
        
        />
    <LinearLayout 
         android:id="@+id/ll_ip_display"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:background="@drawable/ip_search"
        >
    <TextView
        android:id="@+id/tv_ip_display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ip_search"
        />
    <TextView
        android:id="@+id/tv_ip_display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ip_search"
        />
    </LinearLayout>
</LinearLayout>
